# QT6_GLSL

./: .gitignore  CMakeLists.txt  QT6_GLSL.slnx  README.md
BCGP/: BCGP.cpp  BCGP.h  BCGP.ui  BCGP.vcxproj  BCGP.vcxproj.filters  Mdiarea.h  main.cpp
DCGui/: AuxMainWindow.h  CMakeLists.txt  Calculator.h  ColorTable.h  ConfigParser.cpp  DCGui.vcxproj  DCGui.vcxproj.filters  IWindow.cpp  IWindow.h  Logger.cpp  Logger.h  PluginInterface.h  UI_IPlugin.h  dcguiDLL.h
DCLCMG/: DCLCMG.vcxproj  DCLCMG.vcxproj.filters  LicenseManager.cpp
GLSLViewer/: GLSLViewer.cpp  GLSLViewer.h  GLSLViewer.vcxproj  GLSLViewer.vcxproj.filters
GLSLViewer/shaders/: pointcloud.vert
QT6_GLSL/: PointCloudWidget.cpp  PointCloudWidget.h  QT6_GLSL.vcxproj  main.cpp
cmake/: Qt56CoreDeploySupport.cmake  Qt56CoreMacros.cmake  Qt56PublicCMakeHelpers.cmake  Qt56PublicFinalizerHelpers.cmake  Qt56PublicPluginHelpers.cmake  Qt56PublicTargetHelpers.cmake  Qt56PublicWalkLibsHelpers.cmake  QtSupport.cmake
res/Config/: BCGPencrypt  BCGPunencrypt
res/Config/plugin/: GeoDEM  GeoMesh  PDam
res/Resources/: LAYERDEF_HOLE.ini  server.ini
res/Resources/qss/新建文件夹/: dclw-mp.qss
src/: CMakeLists.txt
src/BCGP/: BCGP.cpp  BCGP.h  CMakeLists.txt  Mdiarea.cpp  resource.qrc
src/DCGui/: AuxMainWindow.cpp  CMakeLists.txt  ConfigParser.h  IWindow.cpp  IWindow.h  UI_IWindow.h
src/DCGui/Impl/: Impl_ColorTable.cxx  Impl_ColorTable.hxx
src/DCLCMG/: CMakeLists.txt  HardwareInfo.cpp  HardwareInfo.h  LicenseFile.cpp  LicenseFile.h  LicenseManager.h  dclcmg_global.h
src/GLSLViewer/: CMakeLists.txt  glslviewer_global.h
test/: CMakeLists.txt
test/QT6_GLSL/: CMakeLists.txt  PointCloudWidget.h  QT6_GLSL.qrc  QT6_GLSL.ui  QT6_GLSL.vcxproj.filters  main.cpp
